tests/paczka1/fuzzy1/23817119.err
Error in line 1: qk7nzlY A683 8,6
Error in line 3: OdQZUpGfB3 A475 22,7
Error in line 6: IV2R8T A101 31,6
Error in line 4: qk7nzlY A101 67,5
Error in line 18: qk7nzlY S712 86,1
